prowlarr-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: prowlarr
  annotations:
    linkerd.io/inject: enabled
