flaresolverr-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
    part-of: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
      part-of: prowlarr
  template:
    metadata:
      labels:
        app: flaresolverr
        part-of: prowlarr
    spec:
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:v2.2.1
        ports:
        - name: flaresolverr
          containerPort: 8191
        resources:
          limits:
            memory: 300Mi
          requests:
            memory: 300Mi
