prowlarr-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
  labels:
    app: prowlarr
    part-of: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
      part-of: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        part-of: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: ghcr.io/linuxserver/prowlarr:0.3.0-nightly
        ports:
        - name: prowlarr
          containerPort: 9696
        volumeMounts:
        - name: prowlarr
          mountPath: /config
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 200Mi
        readinessProbe:
          tcpSocket:
            port: prowlarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: prowlarr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: prowlarr
        persistentVolumeClaim:
          claimName: prowlarr
