prowlarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  ports:
    - port: 9696
      targetPort: prowlarr
  selector:
    app: prowlarr
    part-of: prowlarr
